# django_gogo

./: pyproject.toml
config/settings/: base.py
