[tool.poetry]
name = "django-gogo"
version = "0.1.0"
description = ""
authors = ["Donggurii._.dd <ehdgur741@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
black = "^24.8.0"
isort = "^5.13.2"
djangorestframework = "^3.15.2"
pillow = "^10.4.0"
setuptools = "^75.1.0"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
